[package]
name = "dothing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
chrono = "0.4.31"
docker-api = "0.14.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
starduck = "0.1.10"
