[package]
name = "dothing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.3"
chrono = "0.4.31"
docker-api = "0.14.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }

starduck = "0.1"

uuid = { version = "1.6.1", features = ["serde", "v4"] }
tower-http = { version = "0.5.0", features = ["fs"] }
tower = "0.4.13"
http = "1.0.0"
quit = "2.0"
async-trait = "0.1.77"
reqwest = { version = "0.11.23", features = ["json"] }
